Add full-width styling for horizontal rules in details section

--- a/css/styles.css
+++ b/css/styles.css
@@ -468,6 +468,10 @@ details {
         margin: 32px 12px 32px 12px;
     }
 
+    hr {
+        width: 100%;
+    }
+
     #mute-btn {
         width: 36px;
         height: 36px;
